<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_medconnect"
        android:textSize="24sp"
        android:fontFamily="@font/font_medium"
        android:layout_centerHorizontal="true"
        android:textFontWeight="800"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login"
        android:layout_marginTop="24dp"
        android:layout_below="@id/welcome_text"/>


    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="16dp"
        android:layout_below="@id/login_image"
        android:textSize="18sp"
        android:fontFamily="@font/font_medium"
        android:layout_centerHorizontal="true"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_id_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_below="@id/login_text"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_id"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_id_input_layout"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="48dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingHorizontal="48dp"
        android:paddingVertical="8dp"/>

</RelativeLayout>